--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "homepage": "http://proxyo.js.org",
   "devDependencies": {
     "babel-loader": "^6.4.0",
+    "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "chai": "3.5.0",
